Chore: Create makefile Update db schema

--- a/apps/server/.env
+++ b/apps/server/.env
@@ -3,7 +3,7 @@ PORT=9090
 
 DB_HOST="localhost"
 DB_HOST_TEST="localhost"
-DB_NAME="go-coffee-shop"
+DB_NAME="black-coffee"
 DB_NAME_TEST="go-coffee-shop-test"
 DB_USER="rois"
 DB_PASS="rois"
