--- a/apps/server/.env
+++ b/apps/server/.env
@@ -3,7 +3,8 @@ PORT=9090
 
 DB_HOST="localhost"
 DB_HOST_TEST="localhost"
-DB_NAME="black-coffee"
+# DB_NAME="black-coffee"
+DB_NAME="go-coffee-shop-test"
 DB_USER="rois"
 DB_PASS="rois"
 DB_PORT=5432
