--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -13,9 +13,12 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.4",
     "axios": "^1.6.8",
+    "chart.js": "^4.4.3",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "jwt-decode": "^4.0.0",
     "postcss-cli": "^11.0.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
